--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      background-color: #f0f0f0;
+      background: url('background.png') center/cover no-repeat fixed;
       min-height: 100vh;
       margin: 0;
     }
