--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>QR Code ID Scanner</title>
+  <title>PTTF Umpire Verifier</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -69,16 +69,16 @@
   </style>
 </head>
 <body>
-  <h2>QR Code ID Scanner</h2>
+  <h2>PTTF Umpire Verifier</h2>
 
   <button id="start-scan">Start QR Scan</button>
 
   <div id="reader">
-    <img id="id-placeholder" src="id_placeholder.png" alt="Waiting for scan..." style="width:100%; height:100%; object-fit:contain;">
+    <img id="id-placeholder" src="images/id_placeholder.png" alt="Waiting for scan..." style="width:100%; height:100%; object-fit:contain;">
   </div>
 
   <div id="id-card">
-    <img id="id-photo" src="id_placeholder.png" alt="ID Photo">
+    <img id="id-photo" src="images/id_placeholder.png" alt="ID Photo">
     <div class="info" id="surname">Surname: -</div>
     <div class="info" id="givenName">Given Name: -</div>
     <div class="info" id="middleName">Middle Name: -</div>
@@ -129,7 +129,7 @@
         html5QrCode.stop().then(() => {
           scanning = false;
           document.getElementById("reader").innerHTML =
-            '<img id="id-placeholder" src="id_placeholder.png" alt="Waiting for scan..." style="width:100%; height:100%; object-fit:contain;">';
+            '<img id="id-placeholder" src="images/id_placeholder.png" alt="Waiting for scan..." style="width:100%; height:100%; object-fit:contain;">';
         }).catch(err => console.error("Stop failed", err));
       }
     }
