--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      background: url('background.png') center/cover no-repeat fixed;
+      background: url('images/background.png') center/cover no-repeat fixed;
       min-height: 100vh;
       margin: 0;
     }
@@ -78,7 +78,7 @@
   </div>
 
   <div id="id-card">
-    <img id="id-photo" src="images/id_placeholder.png" alt="ID Photo">
+    <img id="id-photo" src="images/1placeholder.png" alt="ID Photo">
     <div class="info" id="surname">Surname: -</div>
     <div class="info" id="givenName">Given Name: -</div>
     <div class="info" id="middleName">Middle Name: -</div>
