--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>QR Code Umpire Tracker</title>
+  <title>PTTF Umpire Verifier</title>
   <style>
     body {
       margin: 0;
@@ -58,7 +58,7 @@
 </head>
 <body>
 
-  <h1>QR Code Umpire Tracker</h1>
+  <h1>PTTF Umpire Verifier</h1>
   <div id="reader"></div>
   <button onclick="startScanner()">Start Scan</button>
   
